# embed_files

./: .gitignore  CMakeLists.txt  README.md  embed_files.cmake
.github/workflows/: main.yml
examples/: CMakeLists.txt  main.cpp  matmul_kernel.cl
source/: CMakeLists.txt  embed_files.cpp
tests/: CMakeLists.txt  embed_files_test.cpp
